src/compiler_bison.output
Terminals unused in grammar

   PLUS_EQUAL
   MINUS_EQUAL
   TIMES_EQUAL
   DIVIDE_EQUAL
   MOD_EQUAL
   LEFT_SHIFT_EQUAL
   RIGHT_SHIFT_EQUAL
   B_AND_EQUAL
   XOR_EQUAL
   B_OR_EQUAL
   AUTO
   BREAK
   CASE
   CHAR
   CONST
   CONTINUE
   DEFAULT
   DO
   DOUBLE
   ELSE
   ENUM
   FLOAT
   FOR
   GOTO
   IF
   INT
   LONG
   REGISTER
   RETURN
   SHORT
   SIGNED
   STATIC
   STRUCT
   SWITCH
   TYPEDEF
   UNION
   UNSIGNED
   VOID
   WHILE
   EXTERN
   VOLATILE
   TYPEDEF_T


State 42 conflicts: 1 reduce/reduce


Grammar

    0 $accept: ROOT $end

    1 ROOT: EXPRESSION

    2 EXPRESSION: ASSIGNMENT_EXPRESSION

    3 TYPE_NAME: IDENTIFIER

    4 ARGUMENT_EXPRESSION_LIST: ASSIGNMENT_EXPRESSION
    5                         | ARGUMENT_EXPRESSION_LIST ',' ASSIGNMENT_EXPRESSION

    6 ASSIGNMENT_EXPRESSION: CONDITIONAL_EXPRESSION

    7 CONDITIONAL_EXPRESSION: LOGICAL_OR_EXPRESSION
    8                       | LOGICAL_OR_EXPRESSION '?' EXPRESSION ':' CONDITIONAL_EXPRESSION

    9 LOGICAL_OR_EXPRESSION: LOGICAL_AND_EXPRESSION
   10                      | LOGICAL_OR_EXPRESSION OR LOGICAL_AND_EXPRESSION

   11 LOGICAL_AND_EXPRESSION: INCLUSIVE_OR_EXPRESSION
   12                       | LOGICAL_AND_EXPRESSION AND INCLUSIVE_OR_EXPRESSION

   13 INCLUSIVE_OR_EXPRESSION: EXCLUSIVE_OR_EXPRESSION
   14                        | INCLUSIVE_OR_EXPRESSION '|' EXCLUSIVE_OR_EXPRESSION

   15 EXCLUSIVE_OR_EXPRESSION: AND_EXPRESSION
   16                        | EXCLUSIVE_OR_EXPRESSION '^' AND_EXPRESSION

   17 AND_EXPRESSION: EQUALITY_EXPRESSION
   18               | AND_EXPRESSION '&' EQUALITY_EXPRESSION

   19 EQUALITY_EXPRESSION: RELATIONAL_EXPRESSION
   20                    | EQUALITY_EXPRESSION EQUAL_TO RELATIONAL_EXPRESSION
   21                    | EQUALITY_EXPRESSION NOT_EQUAL_TO RELATIONAL_EXPRESSION

   22 RELATIONAL_EXPRESSION: SHIFT_EXPRESSION
   23                      | RELATIONAL_EXPRESSION '<' SHIFT_EXPRESSION
   24                      | RELATIONAL_EXPRESSION '>' SHIFT_EXPRESSION
   25                      | RELATIONAL_EXPRESSION LESS_THAN_EQUAL SHIFT_EXPRESSION
   26                      | RELATIONAL_EXPRESSION MORE_THAN_EQUAL SHIFT_EXPRESSION

   27 SHIFT_EXPRESSION: ADDITIVE_EXPRESSION
   28                 | SHIFT_EXPRESSION LEFT_SHIFT ADDITIVE_EXPRESSION
   29                 | SHIFT_EXPRESSION RIGHT_SHIFT ADDITIVE_EXPRESSION

   30 ADDITIVE_EXPRESSION: MULTIPLICATIVE_EXPRESSION
   31                    | ADDITIVE_EXPRESSION '+' MULTIPLICATIVE_EXPRESSION
   32                    | ADDITIVE_EXPRESSION '-' MULTIPLICATIVE_EXPRESSION

   33 MULTIPLICATIVE_EXPRESSION: CAST_EXPRESSION
   34                          | MULTIPLICATIVE_EXPRESSION '*' CAST_EXPRESSION
   35                          | MULTIPLICATIVE_EXPRESSION '/' CAST_EXPRESSION
   36                          | MULTIPLICATIVE_EXPRESSION '%' CAST_EXPRESSION

   37 CAST_EXPRESSION: UNARY_EXPRESSION
   38                | '(' TYPE_NAME ')' CAST_EXPRESSION

   39 UNARY_EXPRESSION: POSTFIX_EXPRESSION
   40                 | PLUSPLUS UNARY_EXPRESSION
   41                 | MINUSMINUS UNARY_EXPRESSION
   42                 | SIZEOF UNARY_EXPRESSION
   43                 | SIZEOF '(' TYPE_NAME ')'
   44                 | '&' CAST_EXPRESSION
   45                 | '*' CAST_EXPRESSION
   46                 | '+' CAST_EXPRESSION
   47                 | '-' CAST_EXPRESSION
   48                 | '~' CAST_EXPRESSION
   49                 | '!' CAST_EXPRESSION

   50 POSTFIX_EXPRESSION: PRIMARY_EXPRESSION
   51                   | POSTFIX_EXPRESSION '[' EXPRESSION ']'
   52                   | POSTFIX_EXPRESSION '(' ')'
   53                   | POSTFIX_EXPRESSION '(' ARGUMENT_EXPRESSION_LIST ')'
   54                   | POSTFIX_EXPRESSION '.' IDENTIFIER
   55                   | POSTFIX_EXPRESSION ARROW IDENTIFIER
   56                   | POSTFIX_EXPRESSION PLUSPLUS
   57                   | POSTFIX_EXPRESSION MINUSMINUS

   58 PRIMARY_EXPRESSION: IDENTIFIER
   59                   | NUMBER
   60                   | STRING_LITERAL
   61                   | '(' EXPRESSION ')'
   62                   | ENUM_VAL


Terminals, with rules where they appear

$end (0) 0
'!' (33) 49
'%' (37) 36
'&' (38) 18 44
'(' (40) 38 43 52 53 61
')' (41) 38 43 52 53 61
'*' (42) 34 45
'+' (43) 31 46
',' (44) 5
'-' (45) 32 47
'.' (46) 54
'/' (47) 35
':' (58) 8
'<' (60) 23
'>' (62) 24
'?' (63) 8
'[' (91) 51
']' (93) 51
'^' (94) 16
'|' (124) 14
'~' (126) 48
error (256)
STRING_LITERAL <string> (258) 60
PLUSPLUS (259) 40 56
MINUSMINUS (260) 41 57
EQUAL_TO (261) 20
NOT_EQUAL_TO (262) 21
LESS_THAN_EQUAL (263) 25
MORE_THAN_EQUAL (264) 26
AND (265) 12
OR (266) 10
LEFT_SHIFT (267) 28
RIGHT_SHIFT (268) 29
PLUS_EQUAL (269)
MINUS_EQUAL (270)
TIMES_EQUAL (271)
DIVIDE_EQUAL (272)
MOD_EQUAL (273)
LEFT_SHIFT_EQUAL (274)
RIGHT_SHIFT_EQUAL (275)
B_AND_EQUAL (276)
XOR_EQUAL (277)
B_OR_EQUAL (278)
ARROW (279) 55
AUTO (280)
BREAK (281)
CASE (282)
CHAR (283)
CONST (284)
CONTINUE (285)
DEFAULT (286)
DO (287)
DOUBLE (288)
ELSE (289)
ENUM (290)
ENUM_VAL <string> (291) 62
FLOAT (292)
FOR (293)
GOTO (294)
IF (295)
INT (296)
LONG (297)
REGISTER (298)
RETURN (299)
SHORT (300)
SIGNED (301)
SIZEOF (302) 42 43
STATIC (303)
STRUCT (304)
SWITCH (305)
TYPEDEF (306)
UNION (307)
UNSIGNED (308)
VOID (309)
WHILE (310)
EXTERN (311)
VOLATILE (312)
NUMBER <number> (313) 59
IDENTIFIER <string> (314) 3 54 55 58
TYPEDEF_T (315)


Nonterminals, with rules where they appear

$accept (81)
    on left: 0
ROOT (82)
    on left: 1, on right: 0
EXPRESSION <ExpressionPtr> (83)
    on left: 2, on right: 1 8 51 61
TYPE_NAME <string> (84)
    on left: 3, on right: 38 43
ARGUMENT_EXPRESSION_LIST <ArgumentExpressionListPtr> (85)
    on left: 4 5, on right: 5 53
ASSIGNMENT_EXPRESSION <ExpressionPtr> (86)
    on left: 6, on right: 2 4 5
CONDITIONAL_EXPRESSION <ExpressionPtr> (87)
    on left: 7 8, on right: 6 8
LOGICAL_OR_EXPRESSION <ExpressionPtr> (88)
    on left: 9 10, on right: 7 8 10
LOGICAL_AND_EXPRESSION <ExpressionPtr> (89)
    on left: 11 12, on right: 9 10 12
INCLUSIVE_OR_EXPRESSION <ExpressionPtr> (90)
    on left: 13 14, on right: 11 12 14
EXCLUSIVE_OR_EXPRESSION <ExpressionPtr> (91)
    on left: 15 16, on right: 13 14 16
AND_EXPRESSION <ExpressionPtr> (92)
    on left: 17 18, on right: 15 16 18
EQUALITY_EXPRESSION <ExpressionPtr> (93)
    on left: 19 20 21, on right: 17 18 20 21
RELATIONAL_EXPRESSION <ExpressionPtr> (94)
    on left: 22 23 24 25 26, on right: 19 20 21 23 24 25 26
SHIFT_EXPRESSION <ExpressionPtr> (95)
    on left: 27 28 29, on right: 22 23 24 25 26 28 29
ADDITIVE_EXPRESSION <ExpressionPtr> (96)
    on left: 30 31 32, on right: 27 28 29 31 32
MULTIPLICATIVE_EXPRESSION <ExpressionPtr> (97)
    on left: 33 34 35 36, on right: 30 31 32 34 35 36
CAST_EXPRESSION <ExpressionPtr> (98)
    on left: 37 38, on right: 33 34 35 36 38 44 45 46 47 48 49
UNARY_EXPRESSION <ExpressionPtr> (99)
    on left: 39 40 41 42 43 44 45 46 47 48 49, on right: 37 40 41 42
POSTFIX_EXPRESSION <ExpressionPtr> (100)
    on left: 50 51 52 53 54 55 56 57, on right: 39 51 52 53 54 55 56
    57
PRIMARY_EXPRESSION <ExpressionPtr> (101)
    on left: 58 59 60 61 62, on right: 50


State 0

    0 $accept: . ROOT $end

    STRING_LITERAL  shift, and go to state 1
    PLUSPLUS        shift, and go to state 2
    MINUSMINUS      shift, and go to state 3
    ENUM_VAL        shift, and go to state 4
    SIZEOF          shift, and go to state 5
    NUMBER          shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    '&'             shift, and go to state 8
    '+'             shift, and go to state 9
    '-'             shift, and go to state 10
    '*'             shift, and go to state 11
    '('             shift, and go to state 12
    '~'             shift, and go to state 13
    '!'             shift, and go to state 14

    ROOT                       go to state 15
    EXPRESSION                 go to state 16
    ASSIGNMENT_EXPRESSION      go to state 17
    CONDITIONAL_EXPRESSION     go to state 18
    LOGICAL_OR_EXPRESSION      go to state 19
    LOGICAL_AND_EXPRESSION     go to state 20
    INCLUSIVE_OR_EXPRESSION    go to state 21
    EXCLUSIVE_OR_EXPRESSION    go to state 22
    AND_EXPRESSION             go to state 23
    EQUALITY_EXPRESSION        go to state 24
    RELATIONAL_EXPRESSION      go to state 25
    SHIFT_EXPRESSION           go to state 26
    ADDITIVE_EXPRESSION        go to state 27
    MULTIPLICATIVE_EXPRESSION  go to state 28
    CAST_EXPRESSION            go to state 29
    UNARY_EXPRESSION           go to state 30
    POSTFIX_EXPRESSION         go to state 31
    PRIMARY_EXPRESSION         go to state 32


State 1

   60 PRIMARY_EXPRESSION: STRING_LITERAL .

    $default  reduce using rule 60 (PRIMARY_EXPRESSION)


State 2

   40 UNARY_EXPRESSION: PLUSPLUS . UNARY_EXPRESSION

    STRING_LITERAL  shift, and go to state 1
    PLUSPLUS        shift, and go to state 2
    MINUSMINUS      shift, and go to state 3
    ENUM_VAL        shift, and go to state 4
    SIZEOF          shift, and go to state 5
    NUMBER          shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    '&'             shift, and go to state 8
    '+'             shift, and go to state 9
    '-'             shift, and go to state 10
    '*'             shift, and go to state 11
    '('             shift, and go to state 33
    '~'             shift, and go to state 13
    '!'             shift, and go to state 14

    UNARY_EXPRESSION    go to state 34
    POSTFIX_EXPRESSION  go to state 31
    PRIMARY_EXPRESSION  go to state 32


State 3

   41 UNARY_EXPRESSION: MINUSMINUS . UNARY_EXPRESSION

    STRING_LITERAL  shift, and go to state 1
    PLUSPLUS        shift, and go to state 2
    MINUSMINUS      shift, and go to state 3
    ENUM_VAL        shift, and go to state 4
    SIZEOF          shift, and go to state 5
    NUMBER          shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    '&'             shift, and go to state 8
    '+'             shift, and go to state 9
    '-'             shift, and go to state 10
    '*'             shift, and go to state 11
    '('             shift, and go to state 33
    '~'             shift, and go to state 13
    '!'             shift, and go to state 14

    UNARY_EXPRESSION    go to state 35
    POSTFIX_EXPRESSION  go to state 31
    PRIMARY_EXPRESSION  go to state 32


State 4

   62 PRIMARY_EXPRESSION: ENUM_VAL .

    $default  reduce using rule 62 (PRIMARY_EXPRESSION)


State 5

   42 UNARY_EXPRESSION: SIZEOF . UNARY_EXPRESSION
   43                 | SIZEOF . '(' TYPE_NAME ')'

    STRING_LITERAL  shift, and go to state 1
    PLUSPLUS        shift, and go to state 2
    MINUSMINUS      shift, and go to state 3
    ENUM_VAL        shift, and go to state 4
    SIZEOF          shift, and go to state 5
    NUMBER          shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    '&'             shift, and go to state 8
    '+'             shift, and go to state 9
    '-'             shift, and go to state 10
    '*'             shift, and go to state 11
    '('             shift, and go to state 36
    '~'             shift, and go to state 13
    '!'             shift, and go to state 14

    UNARY_EXPRESSION    go to state 37
    POSTFIX_EXPRESSION  go to state 31
    PRIMARY_EXPRESSION  go to state 32


State 6

   59 PRIMARY_EXPRESSION: NUMBER .

    $default  reduce using rule 59 (PRIMARY_EXPRESSION)


State 7

   58 PRIMARY_EXPRESSION: IDENTIFIER .

    $default  reduce using rule 58 (PRIMARY_EXPRESSION)


State 8

   44 UNARY_EXPRESSION: '&' . CAST_EXPRESSION

    STRING_LITERAL  shift, and go to state 1
    PLUSPLUS        shift, and go to state 2
    MINUSMINUS      shift, and go to state 3
    ENUM_VAL        shift, and go to state 4
    SIZEOF          shift, and go to state 5
    NUMBER          shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    '&'             shift, and go to state 8
    '+'             shift, and go to state 9
    '-'             shift, and go to state 10
    '*'             shift, and go to state 11
    '('             shift, and go to state 12
    '~'             shift, and go to state 13
    '!'             shift, and go to state 14

    CAST_EXPRESSION     go to state 38
    UNARY_EXPRESSION    go to state 30
    POSTFIX_EXPRESSION  go to state 31
    PRIMARY_EXPRESSION  go to state 32


State 9

   46 UNARY_EXPRESSION: '+' . CAST_EXPRESSION

    STRING_LITERAL  shift, and go to state 1
    PLUSPLUS        shift, and go to state 2
    MINUSMINUS      shift, and go to state 3
    ENUM_VAL        shift, and go to state 4
    SIZEOF          shift, and go to state 5
    NUMBER          shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    '&'             shift, and go to state 8
    '+'             shift, and go to state 9
    '-'             shift, and go to state 10
    '*'             shift, and go to state 11
    '('             shift, and go to state 12
    '~'             shift, and go to state 13
    '!'             shift, and go to state 14

    CAST_EXPRESSION     go to state 39
    UNARY_EXPRESSION    go to state 30
    POSTFIX_EXPRESSION  go to state 31
    PRIMARY_EXPRESSION  go to state 32


State 10

   47 UNARY_EXPRESSION: '-' . CAST_EXPRESSION

    STRING_LITERAL  shift, and go to state 1
    PLUSPLUS        shift, and go to state 2
    MINUSMINUS      shift, and go to state 3
    ENUM_VAL        shift, and go to state 4
    SIZEOF          shift, and go to state 5
    NUMBER          shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    '&'             shift, and go to state 8
    '+'             shift, and go to state 9
    '-'             shift, and go to state 10
    '*'             shift, and go to state 11
    '('             shift, and go to state 12
    '~'             shift, and go to state 13
    '!'             shift, and go to state 14

    CAST_EXPRESSION     go to state 40
    UNARY_EXPRESSION    go to state 30
    POSTFIX_EXPRESSION  go to state 31
    PRIMARY_EXPRESSION  go to state 32


State 11

   45 UNARY_EXPRESSION: '*' . CAST_EXPRESSION

    STRING_LITERAL  shift, and go to state 1
    PLUSPLUS        shift, and go to state 2
    MINUSMINUS      shift, and go to state 3
    ENUM_VAL        shift, and go to state 4
    SIZEOF          shift, and go to state 5
    NUMBER          shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    '&'             shift, and go to state 8
    '+'             shift, and go to state 9
    '-'             shift, and go to state 10
    '*'             shift, and go to state 11
    '('             shift, and go to state 12
    '~'             shift, and go to state 13
    '!'             shift, and go to state 14

    CAST_EXPRESSION     go to state 41
    UNARY_EXPRESSION    go to state 30
    POSTFIX_EXPRESSION  go to state 31
    PRIMARY_EXPRESSION  go to state 32


State 12

   38 CAST_EXPRESSION: '(' . TYPE_NAME ')' CAST_EXPRESSION
   61 PRIMARY_EXPRESSION: '(' . EXPRESSION ')'

    STRING_LITERAL  shift, and go to state 1
    PLUSPLUS        shift, and go to state 2
    MINUSMINUS      shift, and go to state 3
    ENUM_VAL        shift, and go to state 4
    SIZEOF          shift, and go to state 5
    NUMBER          shift, and go to state 6
    IDENTIFIER      shift, and go to state 42
    '&'             shift, and go to state 8
    '+'             shift, and go to state 9
    '-'             shift, and go to state 10
    '*'             shift, and go to state 11
    '('             shift, and go to state 12
    '~'             shift, and go to state 13
    '!'             shift, and go to state 14

    EXPRESSION                 go to state 43
    TYPE_NAME                  go to state 44
    ASSIGNMENT_EXPRESSION      go to state 17
    CONDITIONAL_EXPRESSION     go to state 18
    LOGICAL_OR_EXPRESSION      go to state 19
    LOGICAL_AND_EXPRESSION     go to state 20
    INCLUSIVE_OR_EXPRESSION    go to state 21
    EXCLUSIVE_OR_EXPRESSION    go to state 22
    AND_EXPRESSION             go to state 23
    EQUALITY_EXPRESSION        go to state 24
    RELATIONAL_EXPRESSION      go to state 25
    SHIFT_EXPRESSION           go to state 26
    ADDITIVE_EXPRESSION        go to state 27
    MULTIPLICATIVE_EXPRESSION  go to state 28
    CAST_EXPRESSION            go to state 29
    UNARY_EXPRESSION           go to state 30
    POSTFIX_EXPRESSION         go to state 31
    PRIMARY_EXPRESSION         go to state 32


State 13

   48 UNARY_EXPRESSION: '~' . CAST_EXPRESSION

    STRING_LITERAL  shift, and go to state 1
    PLUSPLUS        shift, and go to state 2
    MINUSMINUS      shift, and go to state 3
    ENUM_VAL        shift, and go to state 4
    SIZEOF          shift, and go to state 5
    NUMBER          shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    '&'             shift, and go to state 8
    '+'             shift, and go to state 9
    '-'             shift, and go to state 10
    '*'             shift, and go to state 11
    '('             shift, and go to state 12
    '~'             shift, and go to state 13
    '!'             shift, and go to state 14

    CAST_EXPRESSION     go to state 45
    UNARY_EXPRESSION    go to state 30
    POSTFIX_EXPRESSION  go to state 31
    PRIMARY_EXPRESSION  go to state 32


State 14

   49 UNARY_EXPRESSION: '!' . CAST_EXPRESSION

    STRING_LITERAL  shift, and go to state 1
    PLUSPLUS        shift, and go to state 2
    MINUSMINUS      shift, and go to state 3
    ENUM_VAL        shift, and go to state 4
    SIZEOF          shift, and go to state 5
    NUMBER          shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    '&'             shift, and go to state 8
    '+'             shift, and go to state 9
    '-'             shift, and go to state 10
    '*'             shift, and go to state 11
    '('             shift, and go to state 12
    '~'             shift, and go to state 13
    '!'             shift, and go to state 14

    CAST_EXPRESSION     go to state 46
    UNARY_EXPRESSION    go to state 30
    POSTFIX_EXPRESSION  go to state 31
    PRIMARY_EXPRESSION  go to state 32


State 15

    0 $accept: ROOT . $end

    $end  shift, and go to state 47


State 16

    1 ROOT: EXPRESSION .

    $default  reduce using rule 1 (ROOT)


State 17

    2 EXPRESSION: ASSIGNMENT_EXPRESSION .

    $default  reduce using rule 2 (EXPRESSION)


State 18

    6 ASSIGNMENT_EXPRESSION: CONDITIONAL_EXPRESSION .

    $default  reduce using rule 6 (ASSIGNMENT_EXPRESSION)


State 19

    7 CONDITIONAL_EXPRESSION: LOGICAL_OR_EXPRESSION .
    8                       | LOGICAL_OR_EXPRESSION . '?' EXPRESSION ':' CONDITIONAL_EXPRESSION
   10 LOGICAL_OR_EXPRESSION: LOGICAL_OR_EXPRESSION . OR LOGICAL_AND_EXPRESSION

    OR   shift, and go to state 48
    '?'  shift, and go to state 49

    $default  reduce using rule 7 (CONDITIONAL_EXPRESSION)


State 20

    9 LOGICAL_OR_EXPRESSION: LOGICAL_AND_EXPRESSION .
   12 LOGICAL_AND_EXPRESSION: LOGICAL_AND_EXPRESSION . AND INCLUSIVE_OR_EXPRESSION

    AND  shift, and go to state 50

    $default  reduce using rule 9 (LOGICAL_OR_EXPRESSION)


State 21

   11 LOGICAL_AND_EXPRESSION: INCLUSIVE_OR_EXPRESSION .
   14 INCLUSIVE_OR_EXPRESSION: INCLUSIVE_OR_EXPRESSION . '|' EXCLUSIVE_OR_EXPRESSION

    '|'  shift, and go to state 51

    $default  reduce using rule 11 (LOGICAL_AND_EXPRESSION)


State 22

   13 INCLUSIVE_OR_EXPRESSION: EXCLUSIVE_OR_EXPRESSION .
   16 EXCLUSIVE_OR_EXPRESSION: EXCLUSIVE_OR_EXPRESSION . '^' AND_EXPRESSION

    '^'  shift, and go to state 52

    $default  reduce using rule 13 (INCLUSIVE_OR_EXPRESSION)


State 23

   15 EXCLUSIVE_OR_EXPRESSION: AND_EXPRESSION .
   18 AND_EXPRESSION: AND_EXPRESSION . '&' EQUALITY_EXPRESSION

    '&'  shift, and go to state 53

    $default  reduce using rule 15 (EXCLUSIVE_OR_EXPRESSION)


State 24

   17 AND_EXPRESSION: EQUALITY_EXPRESSION .
   20 EQUALITY_EXPRESSION: EQUALITY_EXPRESSION . EQUAL_TO RELATIONAL_EXPRESSION
   21                    | EQUALITY_EXPRESSION . NOT_EQUAL_TO RELATIONAL_EXPRESSION

    EQUAL_TO      shift, and go to state 54
    NOT_EQUAL_TO  shift, and go to state 55

    $default  reduce using rule 17 (AND_EXPRESSION)


State 25

   19 EQUALITY_EXPRESSION: RELATIONAL_EXPRESSION .
   23 RELATIONAL_EXPRESSION: RELATIONAL_EXPRESSION . '<' SHIFT_EXPRESSION
   24                      | RELATIONAL_EXPRESSION . '>' SHIFT_EXPRESSION
   25                      | RELATIONAL_EXPRESSION . LESS_THAN_EQUAL SHIFT_EXPRESSION
   26                      | RELATIONAL_EXPRESSION . MORE_THAN_EQUAL SHIFT_EXPRESSION

    LESS_THAN_EQUAL  shift, and go to state 56
    MORE_THAN_EQUAL  shift, and go to state 57
    '<'              shift, and go to state 58
    '>'              shift, and go to state 59

    $default  reduce using rule 19 (EQUALITY_EXPRESSION)


State 26

   22 RELATIONAL_EXPRESSION: SHIFT_EXPRESSION .
   28 SHIFT_EXPRESSION: SHIFT_EXPRESSION . LEFT_SHIFT ADDITIVE_EXPRESSION
   29                 | SHIFT_EXPRESSION . RIGHT_SHIFT ADDITIVE_EXPRESSION

    LEFT_SHIFT   shift, and go to state 60
    RIGHT_SHIFT  shift, and go to state 61

    $default  reduce using rule 22 (RELATIONAL_EXPRESSION)


State 27

   27 SHIFT_EXPRESSION: ADDITIVE_EXPRESSION .
   31 ADDITIVE_EXPRESSION: ADDITIVE_EXPRESSION . '+' MULTIPLICATIVE_EXPRESSION
   32                    | ADDITIVE_EXPRESSION . '-' MULTIPLICATIVE_EXPRESSION

    '+'  shift, and go to state 62
    '-'  shift, and go to state 63

    $default  reduce using rule 27 (SHIFT_EXPRESSION)


State 28

   30 ADDITIVE_EXPRESSION: MULTIPLICATIVE_EXPRESSION .
   34 MULTIPLICATIVE_EXPRESSION: MULTIPLICATIVE_EXPRESSION . '*' CAST_EXPRESSION
   35                          | MULTIPLICATIVE_EXPRESSION . '/' CAST_EXPRESSION
   36                          | MULTIPLICATIVE_EXPRESSION . '%' CAST_EXPRESSION

    '*'  shift, and go to state 64
    '/'  shift, and go to state 65
    '%'  shift, and go to state 66

    $default  reduce using rule 30 (ADDITIVE_EXPRESSION)


State 29

   33 MULTIPLICATIVE_EXPRESSION: CAST_EXPRESSION .

    $default  reduce using rule 33 (MULTIPLICATIVE_EXPRESSION)


State 30

   37 CAST_EXPRESSION: UNARY_EXPRESSION .

    $default  reduce using rule 37 (CAST_EXPRESSION)


State 31

   39 UNARY_EXPRESSION: POSTFIX_EXPRESSION .
   51 POSTFIX_EXPRESSION: POSTFIX_EXPRESSION . '[' EXPRESSION ']'
   52                   | POSTFIX_EXPRESSION . '(' ')'
   53                   | POSTFIX_EXPRESSION . '(' ARGUMENT_EXPRESSION_LIST ')'
   54                   | POSTFIX_EXPRESSION . '.' IDENTIFIER
   55                   | POSTFIX_EXPRESSION . ARROW IDENTIFIER
   56                   | POSTFIX_EXPRESSION . PLUSPLUS
   57                   | POSTFIX_EXPRESSION . MINUSMINUS

    PLUSPLUS    shift, and go to state 67
    MINUSMINUS  shift, and go to state 68
    ARROW       shift, and go to state 69
    '('         shift, and go to state 70
    '['         shift, and go to state 71
    '.'         shift, and go to state 72

    $default  reduce using rule 39 (UNARY_EXPRESSION)


State 32

   50 POSTFIX_EXPRESSION: PRIMARY_EXPRESSION .

    $default  reduce using rule 50 (POSTFIX_EXPRESSION)


State 33

   61 PRIMARY_EXPRESSION: '(' . EXPRESSION ')'

    STRING_LITERAL  shift, and go to state 1
    PLUSPLUS        shift, and go to state 2
    MINUSMINUS      shift, and go to state 3
    ENUM_VAL        shift, and go to state 4
    SIZEOF          shift, and go to state 5
    NUMBER          shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    '&'             shift, and go to state 8
    '+'             shift, and go to state 9
    '-'             shift, and go to state 10
    '*'             shift, and go to state 11
    '('             shift, and go to state 12
    '~'             shift, and go to state 13
    '!'             shift, and go to state 14

    EXPRESSION                 go to state 43
    ASSIGNMENT_EXPRESSION      go to state 17
    CONDITIONAL_EXPRESSION     go to state 18
    LOGICAL_OR_EXPRESSION      go to state 19
    LOGICAL_AND_EXPRESSION     go to state 20
    INCLUSIVE_OR_EXPRESSION    go to state 21
    EXCLUSIVE_OR_EXPRESSION    go to state 22
    AND_EXPRESSION             go to state 23
    EQUALITY_EXPRESSION        go to state 24
    RELATIONAL_EXPRESSION      go to state 25
    SHIFT_EXPRESSION           go to state 26
    ADDITIVE_EXPRESSION        go to state 27
    MULTIPLICATIVE_EXPRESSION  go to state 28
    CAST_EXPRESSION            go to state 29
    UNARY_EXPRESSION           go to state 30
    POSTFIX_EXPRESSION         go to state 31
    PRIMARY_EXPRESSION         go to state 32


State 34

   40 UNARY_EXPRESSION: PLUSPLUS UNARY_EXPRESSION .

    $default  reduce using rule 40 (UNARY_EXPRESSION)


State 35

   41 UNARY_EXPRESSION: MINUSMINUS UNARY_EXPRESSION .

    $default  reduce using rule 41 (UNARY_EXPRESSION)


State 36

   43 UNARY_EXPRESSION: SIZEOF '(' . TYPE_NAME ')'
   61 PRIMARY_EXPRESSION: '(' . EXPRESSION ')'

    STRING_LITERAL  shift, and go to state 1
    PLUSPLUS        shift, and go to state 2
    MINUSMINUS      shift, and go to state 3
    ENUM_VAL        shift, and go to state 4
    SIZEOF          shift, and go to state 5
    NUMBER          shift, and go to state 6
    IDENTIFIER      shift, and go to state 42
    '&'             shift, and go to state 8
    '+'             shift, and go to state 9
    '-'             shift, and go to state 10
    '*'             shift, and go to state 11
    '('             shift, and go to state 12
    '~'             shift, and go to state 13
    '!'             shift, and go to state 14

    EXPRESSION                 go to state 43
    TYPE_NAME                  go to state 73
    ASSIGNMENT_EXPRESSION      go to state 17
    CONDITIONAL_EXPRESSION     go to state 18
    LOGICAL_OR_EXPRESSION      go to state 19
    LOGICAL_AND_EXPRESSION     go to state 20
    INCLUSIVE_OR_EXPRESSION    go to state 21
    EXCLUSIVE_OR_EXPRESSION    go to state 22
    AND_EXPRESSION             go to state 23
    EQUALITY_EXPRESSION        go to state 24
    RELATIONAL_EXPRESSION      go to state 25
    SHIFT_EXPRESSION           go to state 26
    ADDITIVE_EXPRESSION        go to state 27
    MULTIPLICATIVE_EXPRESSION  go to state 28
    CAST_EXPRESSION            go to state 29
    UNARY_EXPRESSION           go to state 30
    POSTFIX_EXPRESSION         go to state 31
    PRIMARY_EXPRESSION         go to state 32


State 37

   42 UNARY_EXPRESSION: SIZEOF UNARY_EXPRESSION .

    $default  reduce using rule 42 (UNARY_EXPRESSION)


State 38

   44 UNARY_EXPRESSION: '&' CAST_EXPRESSION .

    $default  reduce using rule 44 (UNARY_EXPRESSION)


State 39

   46 UNARY_EXPRESSION: '+' CAST_EXPRESSION .

    $default  reduce using rule 46 (UNARY_EXPRESSION)


State 40

   47 UNARY_EXPRESSION: '-' CAST_EXPRESSION .

    $default  reduce using rule 47 (UNARY_EXPRESSION)


State 41

   45 UNARY_EXPRESSION: '*' CAST_EXPRESSION .

    $default  reduce using rule 45 (UNARY_EXPRESSION)


State 42

    3 TYPE_NAME: IDENTIFIER .
   58 PRIMARY_EXPRESSION: IDENTIFIER .

    ')'       reduce using rule 3 (TYPE_NAME)
    ')'       [reduce using rule 58 (PRIMARY_EXPRESSION)]
    $default  reduce using rule 58 (PRIMARY_EXPRESSION)


State 43

   61 PRIMARY_EXPRESSION: '(' EXPRESSION . ')'

    ')'  shift, and go to state 74


State 44

   38 CAST_EXPRESSION: '(' TYPE_NAME . ')' CAST_EXPRESSION

    ')'  shift, and go to state 75


State 45

   48 UNARY_EXPRESSION: '~' CAST_EXPRESSION .

    $default  reduce using rule 48 (UNARY_EXPRESSION)


State 46

   49 UNARY_EXPRESSION: '!' CAST_EXPRESSION .

    $default  reduce using rule 49 (UNARY_EXPRESSION)


State 47

    0 $accept: ROOT $end .

    $default  accept


State 48

   10 LOGICAL_OR_EXPRESSION: LOGICAL_OR_EXPRESSION OR . LOGICAL_AND_EXPRESSION

    STRING_LITERAL  shift, and go to state 1
    PLUSPLUS        shift, and go to state 2
    MINUSMINUS      shift, and go to state 3
    ENUM_VAL        shift, and go to state 4
    SIZEOF          shift, and go to state 5
    NUMBER          shift, and go to state 6
    IDENTIFIER      shift, and go to state 7
    '&'             shift, and go to state 8
    '+'             shift, and go to state 9
    '-'             shift, and go to state 10
    '*'             shift, and go to state 11
    '('             shift, and go to state 12
    '~'             shift, and go to state 13
    '!'             shift, and go to state 14
